# ucu-recsys-movielens

./: README.md  environment.yml  requirements.in  requirements.txt
ab_test/: report.md
artifacts/: bst_ndcg_model.pkl  simple_nn.pth
data/ml-1m-after_eda/: movies.pickle  users.pickle
experiments/1_eda/: README.md  eda.ipynb
experiments/2_baseline/: README.md  baseline.py  baseline_for_cold_start.ipynb  baseline_recommendations.ipynb  baseline_with_metrics.ipynb  metrics.py  ml_metrics.ipynb
experiments/3_content-based-filtering/: README.md  content-based-main.ipynb  content-based-model-sandbox.ipynb  content-based-model.py  user-user.ipynb
experiments/3_content-filtering/: colab-filter.ipynb
experiments/3_item_item-filtering/: README.md  item-item-main.ipynb  item-item-sandbox.ipynb  item-item.ipynb
experiments/3_user_user-filtering/: README.md  user-user-main.ipynb
experiments/4_alternative_least_squares/: als_experiments.ipynb  main.ipynb
experiments/4_deep_learning/: README.md  deep-learning-main.ipynb
experiments/4_funk_svd/: README.md  funk_experiments.ipynb
experiments/5_ab_test/: README.md  ab_testing.ipynb
experiments/5_ab_test_online/: README.md  ab_online_baseline_nn.ipynb
experiments/5_deep_learning/: deep-learning-main.ipynb
experiments/6_learn_to_rank/: README.md  learning_to_rank.ipynb
experiments/7_two_stage_rank/: README.md  two_stage copy.ipynb  (+1 more)
src/: pyproject.toml  utils.py
src/src/als/: __init__.py  main.py
src/src/funk_svd/: fast_methods.py
src/src/src/: metrics.py  models.py  process.py  utils.py
(+4 files in other folders)
